Repaired: high contrast mode of pricing page

--- a/css/accessibility.css
+++ b/css/accessibility.css
@@ -64,6 +64,11 @@
 		  color: #fff !important;
 		}
 
+		.high-contrast .table-wrapper {
+		  background-color: #000 !important;
+		  color: #fff !important;
+		}
+
 		.high-contrast a {
 		  color: #00ffff !important;
 		}
